[project]
name = "sales"
version = "0.1.0"
description = "sales using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
sales = "sales.main:run"
run_crew = "sales.main:run"
train = "sales.main:train"
replay = "sales.main:replay"
test = "sales.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
